--- a/utils/examples.ipynb
+++ b/utils/examples.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "9ea8de72",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from importlib.machinery import SourceFileLoader\n",
-    "precession = SourceFileLoader(\"precession\", \"../codes/precession.py\").load_module()"
+    "precession = SourceFileLoader(\"precession\", \"../precession/precession.py\").load_module()"
    ]
   },
   {
@@ -33,21 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "215988cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "q = 0.8\n",
     "q"
@@ -55,21 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "e2c2df7a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chi1 = 0.5\n",
     "chi1"
@@ -77,21 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "4179bc45",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chi2 = 0.9\n",
     "chi2"
@@ -107,21 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "e5b1cf61",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chieff_minus,chieff_plus=precession.chiefflimits(q=q, chi1=chi1, chi2=chi2)\n",
     "chieff = 0.1\n",
@@ -139,21 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "63834951",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = 1000\n",
     "r"
@@ -169,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "972d0eb4",
    "metadata": {},
    "outputs": [],
@@ -189,21 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "69dae679",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.04563644])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kappa = precession.kapparescaling(kappatilde=0.5, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
     "kappa"
@@ -219,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "0f8a2f7a",
    "metadata": {},
    "outputs": [],
@@ -239,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "d3972317",
    "metadata": {},
    "outputs": [],
@@ -257,21 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "406fd569",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.15027382])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "deltachi = precession.deltachirescaling(deltachitilde=0.4, kappa=kappa, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
     "deltachi"
@@ -287,21 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "6e35bea4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([1.66141316]), array([1.25261228]), array([1.4089439]))"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "theta1, theta2, deltaphi = precession.conserved_to_angles(deltachi=deltachi, kappa=kappa, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
     "theta1,theta2,deltaphi"
@@ -317,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "87b118fe",
    "metadata": {},
    "outputs": [],
@@ -342,21 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "e915e2b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.14179292e+09])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tau = precession.eval_tau(kappa=kappa, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
     "tau"
@@ -364,21 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "ca2b3f86",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([34.7076951])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha = precession.eval_alpha(kappa=kappa, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
     "alpha"
@@ -386,21 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "44a4fb43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.74912589])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chip_averaged = precession.eval_chip(deltachi=deltachi,kappa=kappa,r=r,chieff=chieff,q=q,chi1=chi1,chi2=chi2,which=\"averaged\")\n",
     "chip_averaged"
@@ -408,21 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "6e248e02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.81485269])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chip_rms = precession.eval_chip(deltachi=deltachi,kappa=kappa,r=r,chieff=chieff,q=q,chi1=chi1,chi2=chi2,which=\"rms\")\n",
     "chip_rms"
@@ -430,21 +298,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "7d1cff9b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['C+'], dtype='<U32')"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "morph = precession.morphology(kappa=kappa, r=r, chieff=chieff, q=q, chi1=chi1, chi2=chi2 )\n",
     "morph"
@@ -468,34 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d733da92",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'theta1': array([[1.53821471, 2.19456888]]),\n",
-       " 'theta2': array([[1.34141214, 0.85578498]]),\n",
-       " 'deltaphi': array([[ 3.00584269, -0.14004177]]),\n",
-       " 'deltachi': array([[-0.0819023 , -0.42450079]]),\n",
-       " 'kappa': array([[0.04563644, 0.06977371]]),\n",
-       " 'r': array([[1000,   10]]),\n",
-       " 'u': array([[0.06403612, 0.64036123]]),\n",
-       " 'deltachiminus': array([[-0.19622919, -0.42562113]]),\n",
-       " 'deltachiplus': array([[-0.08134075,  0.26825594]]),\n",
-       " 'deltachi3': array([[0.74325701, 0.1801658 ]]),\n",
-       " 'chieff': array([0.1]),\n",
-       " 'q': array([0.8]),\n",
-       " 'chi1': array([0.5]),\n",
-       " 'chi2': array([0.9])}"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rvals = [r, 10] # Specify all the outputs you want here\n",
     "outputs = precession.inspiral_precav(kappa=kappa,r=rvals,chieff=chieff,q=q,chi1=chi1,chi2=chi2)\n",
@@ -512,39 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "cfda4483",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'t': array([[0.000000e+00, 7.935974e+10]]),\n",
-       " 'theta1': array([[1.66141316, 0.88395959]]),\n",
-       " 'theta2': array([[1.25261228, 1.76230812]]),\n",
-       " 'deltaphi': array([[1.4089439 , 3.07301953]]),\n",
-       " 'Lh': array([[ 3.13179178e-02,  5.33207833e-18,  9.99509474e-01],\n",
-       "        [ 1.24542216e-03, -6.64332678e-02,  9.97790094e-01]]),\n",
-       " 'S1h': array([[-0.73494006,  0.67476338, -0.06750919],\n",
-       "        [ 0.1569423 , -0.79776376,  0.58218746]]),\n",
-       " 'S2h': array([[-0.73753054, -0.5857321 ,  0.33610506],\n",
-       "        [-0.13214013,  0.98330162, -0.12513137]]),\n",
-       " 'deltachi': array([[-0.15027382,  0.25227467]]),\n",
-       " 'kappa': array([[0.04563644, 0.06865318]]),\n",
-       " 'r': array([[1000,   10]]),\n",
-       " 'u': array([[0.06403612, 0.64036123]]),\n",
-       " 'chieff': array([[0.1       , 0.09999999]]),\n",
-       " 'q': array([0.8]),\n",
-       " 'chi1': array([0.5]),\n",
-       " 'chi2': array([0.9]),\n",
-       " 'cyclesign': array([[1., 1.]])}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "outputs = precession.inspiral_orbav(deltachi=deltachi, kappa=kappa,r=rvals,chieff=chieff,q=q,chi1=chi1,chi2=chi2)\n",
     "outputs"
@@ -560,34 +364,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "0e790880",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'theta1': array([[2.15582199, 1.66496014]]),\n",
-       " 'theta2': array([[0.88474523, 1.25002889]]),\n",
-       " 'deltaphi': array([[-0.64915237, -3.0311064 ]]),\n",
-       " 'deltachi': array([[-0.40678932, -0.15223596]]),\n",
-       " 'kappa': array([[0.06865318, 0.04154245]]),\n",
-       " 'r': array([[10., inf]]),\n",
-       " 'u': array([[0.64036123, 0.        ]]),\n",
-       " 'deltachiminus': array([[-0.43153997, -0.15223596]]),\n",
-       " 'deltachiplus': array([[ 0.25313089, -0.15223596]]),\n",
-       " 'deltachi3': array([[0.18034069,        nan]]),\n",
-       " 'chieff': array([0.1]),\n",
-       " 'q': array([0.8]),\n",
-       " 'chi1': array([0.5]),\n",
-       " 'chi2': array([0.9])}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rvals = [outputs['r'][0,-1], np.inf] # Specify all the outputs you want here\n",
     "outputs = precession.inspiral_precav(kappa=outputs['kappa'][0,-1],r=rvals,chieff=chieff,q=q,chi1=chi1,chi2=chi2)\n",
@@ -606,21 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "2139bcb6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.13857097])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def func(deltachi):\n",
     "    return deltachi\n",
@@ -639,21 +408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "241ed084",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.13857097])"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "u = precession.eval_u(r, q)\n",
     "deltachiminus,deltachiplus,deltachi3 = precession.deltachiroots(kappa=kappa, u=u, chieff=chieff, q=q, chi1=chi1, chi2=chi2)\n",
@@ -665,21 +423,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "23be9d9e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-8.99340873e-14])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(deltachiav_-deltachiav)/deltachiav"
    ]
