--- a/utils/examples.ipynb
+++ b/utils/examples.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Examples\n",
     "\n",
-    "This is a short notebook to illustrate some of the key features of the `precession` module. There much more than this in the code but hopefully this is a good starting point. "
+    "This is a [short notebook](https://github.com/dgerosa/precession/blob/master/utils/examples.ipynb) to illustrate some of the key features of the `precession` module. There much more than this in the code but hopefully this is a good starting point. "
    ]
   },
   {
