--- a/utils/examples.ipynb
+++ b/utils/examples.ipynb
@@ -24,6 +24,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d78f3a3",
+   "metadata": {},
+   "source": [
+    "(The import syntax above is to make sure the online documentation grabs the latest version. For you it should just be ``import precession`` )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f1f00ce",
    "metadata": {},
    "source": [
