moving note to below

--- a/utils/examples.ipynb
+++ b/utils/examples.ipynb
@@ -28,8 +28,7 @@
    "id": "1d78f3a3",
    "metadata": {},
    "source": [
-    "The import syntax above ensures that the online documentation grabs the latest version. For you, it should just be `import precession`, and in case you want to use the eccentric version, import `precession.eccentricity`.\n",
-    "*Note for the usage of the eccentric version of* `precession`: The code is implemented such that almost all the functions available in `precession` can be accessed by just importing its eccentric extension. Some of them are exactly the same as for the circular counterpart; others, specifically those directly involving time or orbital separation, require a different input (briefly, all `r` parameters have been substituted with `(a, e)`). The functions that are specific only to the circular case (like `eval_r` or those related to the remnant properties) cannot be accessed via `precession.eccentricity`. "
+    "The import syntax above ensures that the online documentation grabs the latest version. For you, it should just be `import precession` for the main code that deals with quasi-circular binaries. If you're using the eccentric version, we reccommend importin with  `import precession.eccentricity as precession`."
    ]
   },
   {
@@ -461,7 +460,9 @@
    "cell_type": "markdown",
    "id": "b110ca2c",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Note when using the eccentric version of* `precession`: The code is implemented such that almost all functions available in `precession` can be accessed by simply importing its eccentric extension. Some of them are exactly the same as in the circular counterpart; others—specifically those directly involving time or orbital separation—require different inputs (briefly: all `r` parameters have been replaced with `(a, e)`). Functions that are specific to the circular case only (such as `eval_r` or those related to remnant properties) cannot be accessed via `precession.eccentricity`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -473,10 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "704e45f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#intial semi major axis ( in geometric units)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mnp\u001b[49m.random.seed(\u001b[32m42\u001b[39m)\n\u001b[32m      3\u001b[39m a0= \u001b[32m100\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#final semi major axis\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#intial semi major axis ( in geometric units)\n",
     "np.random.seed(42)\n",
@@ -490,10 +503,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "5550eac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#spin parameters\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m chi1 =\u001b[43mnp\u001b[49m.random.uniform(\u001b[32m0.1\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m      3\u001b[39m chi2 =np.random.uniform(\u001b[32m0.1\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m      4\u001b[39m theta1, theta2, deltaphi = precession_eccentricity.isotropic_angles(N=\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#spin parameters\n",
     "chi1 =np.random.uniform(0.1, 1)\n",
