--- a/utils/examples.ipynb
+++ b/utils/examples.ipynb
@@ -28,7 +28,7 @@
    "id": "1d78f3a3",
    "metadata": {},
    "source": [
-    "The import syntax above ensures that the online documentation grabs the latest version. For you, it should just be `import precession` for the main code that deals with quasi-circular binaries. If you're using the eccentric version, we reccommend importin with  `import precession.eccentricity as precession`."
+    "The import syntax above ensures that the online documentation grabs the latest version. For you, it should just be `import precession` for the main code that deals with quasi-circular binaries. If you're using the eccentric version, we reccommend importing with `import precession.eccentricity as precession`."
    ]
   },
   {
